# voice-chess-assistant

./: .gitignore  README.md  package.json  pnpm-lock.yaml  prek.toml  pyproject.toml  tsconfig.base.json
.github/workflows/: backend-ci.yml  e2e.yml  frontend-ci.yml
docs/: architecture.md  integration.md  setup.md  speech-action-sync.md
examples/server/: .env.example  README.md  pyproject.toml
examples/server/voice_chess_example_server/: __init__.py  main.py
examples/web/: README.md  index.html  package.json  tsconfig.json
examples/web/src/: App.tsx  styles.css
examples/web/src/components/: LivingBoard.tsx
tasks/: lessons.md  todo.md
tests/e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
tests/e2e/specs/: example-app.spec.ts
