[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "packages/voice-chess-server",
    "packages/voice-chess-testkit",
]

[tool.uv.sources]
voice-chess-server = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PTH", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
exclude = [
    "**/node_modules",
    "**/.venv",
    "**/__pycache__",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "packages/voice-chess-server/tests",
]
